Use Arrays.asList